--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   logger: ^1.3.0
   provider: ^6.0.5
   screen_size_test: ^1.0.2+3
+  fluttertoast: ^8.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
