--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  # HTTP client 
   dio: ^5.1.2
+  # for responsiveness of the app
   flutter_screenutil: ^5.7.0
   intl: ^0.18.1
   logger: ^1.3.0
+  # State management
   provider: ^6.0.5
+  # To test responsiveness of the app
   screen_size_test: ^1.0.2+3
   fluttertoast: ^8.2.2
 
